--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "lottie-web": "^5.13.0",
     "ngx-owl-carousel-o": "^19.0.2",
     "primeflex": "^4.0.0",
     "primeicons": "^5.0.0",
