--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve --live-reload=false",
     "build": "ng build",
+    "build:prod": "ng build --configuration production && node scripts/generate-sitemap.js",
+    "generate-sitemap": "node scripts/generate-sitemap.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
