--- a/angular.json
+++ b/angular.json
@@ -69,15 +69,15 @@
               ],
               "outputHashing": "all",
               "optimization": {
-                "scripts": true,
+                "scripts": false,
                 "styles": {
                   "minify": true,
-                  "inlineCritical": false
+                  "inlineCritical": true
                 },
                 "fonts": true
               },
-              "sourceMap": false,
-              "namedChunks": false,
+              "sourceMap": true,
+              "namedChunks": true,
               "extractLicenses": true
             },
             "development": {
